# upm-image-collector

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
src/image_collector/: __init__.py  downloader.py  pipeline.py  scheduler.py  storage.py
tests/: test_downloader.py  test_scheduler.py  test_storage.py
